@@ -1,3 +1,7 @@
+2005-03-11  Sureshkumar T  <tsureshkumar@novell.com>
+
+	* DbConnectionBase.cs : Implemented OnStateChange.
+
 2005-03-08  Sureshkumar T  <tsureshkumar@novell.com>
 
 	* DbParameterBase.cs: Implemented most of get set methods.
